package co.edu.utp.misiontic.cesardiaz.modelo;

public enum EstadoPedido {
    PENDIENTE_ENTREGA, PENDIENTE_COBRAR
}
